<resources>
    <string name="app_name">Shoponn</string>


    <!--Validation-->
    <string name="phone_empty_validation">Please enter phone number</string>
    <string name="phone_valid_validation">Please enter valid phone number</string>
    <string name="internet_error">Please check your internet connection and try again.</string>
    <string name="response_null_or_empty_validation">Response is null or empty.</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="guest_user_login_message">You are login as guest,Please login for this.</string>

    <!--Otp-->
    <string name="otp_text">We have send an OTP to your Mobile number</string>
    <string name="otp_phone_no_text">Please check your mobile number 978*****12 to continue</string>
    <string name="next">Next</string>
    <string name="don_t_receive">Don\'t Receive? Resend</string>
    <string name="verification_id">verification_id</string>
    <string name="phone_number">phone_number</string>
    <string name="country_code">country_code</string>
    <string name="bundle">bundle</string>
    <string name="otp_phone_text_format">%s%s%s</string>
    <string name="dynamic_value_set_format">%s%s%s</string>
    <string name="login_display_text"><![CDATA[By tapping Verify Phone Number, an SMS may be sent. Message & data rates may apply]]></string>
    <string name="dummy_donation_text">A donation may take various forms, including money, alms, services, or goods such as clothing, toys, food, or vehicles. such as blood or organs for transplant.</string>
    <string name="beauty_fashion"><![CDATA[BEAUTY & FASHION]]></string>
    <string name="text_first_name">First Name</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_verify_phone_number">Verify Phone Number</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_already_have_account">Already have an Account? Login</string>
    <string name="text_create_a_account">Create New Account? Register</string>
    <string name="text_username">Username</string>
    <string name="text_log_in">Log In</string>

    <string name="text_no_data">No Data</string>
    <string name="text_upto">UPTO</string>
    <string name="text_customer_name">Customer Name</string>
    <string name="text_address">Address</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_my_orders">My Orders</string>
    <string name="text_saved_addresses">Saved Addresses</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_no_item_in_cart">There is nothing in your shopping cart.</string>
    <string name="text_continue_shopping">Continue Shopping</string>

    <!--SuperCategories-->

    <!--HomeFragment-->
    <string-array name="super_categories_home">
        <item>New Arrival</item>
        <item>Automotive, Real Estate &amp; Industrial</item>
        <item>Bags &amp; Luggage</item>
        <item>Beauty, Health &amp; Fmcg</item>
        <item>Books</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Computers, Laptops &amp; Gaming</item>
        <item>Dinner</item>
        <item>Eateries</item>
        <item>Gifts &amp; Sweets</item>
        <item>GST</item>
        <item>Hobbies &amp; E-Learning</item>
        <item>Home &amp; Living</item>
        <item>Jewellery &amp; Gold</item>
        <item>Lunch</item>
        <item>Mens Zone</item>
        <item>Mobiles, Tablets &amp; Office Equipments</item>
        <item>Non-Prescription</item>
        <item>Prescription</item>
        <item>Sports &amp; Fitness</item>
        <item>Toys, Kids &amp; Babies</item>
        <item>Tv, Audio, Cameras &amp; Appliances</item>
        <item>Womens Zone</item>
        <item>Work From Home</item>
    </string-array>

    <string-array name="super_cat_home_spinner">
        <item>All</item>
        <item>Automotive, Real Estate &amp; Industrial</item>
        <item>Bags &amp; Luggage</item>
        <item>Beauty, Health &amp; Fmcg</item>
        <item>Books</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Computers, Laptops &amp; Gaming</item>
        <item>Dinner</item>
        <item>Eateries</item>
        <item>Gifts &amp; Sweets</item>
        <item>GST</item>
        <item>Hobbies &amp; E-Learning</item>
        <item>Home &amp; Living</item>
        <item>Jewellery &amp; Gold</item>
        <item>Lunch</item>
        <item>Mens Zone</item>
        <item>Mobiles, Tablets &amp; Office Equipments</item>
        <item>Non-Prescription</item>
        <item>Prescription</item>
        <item>Sports &amp; Fitness</item>
        <item>Toys, Kids &amp; Babies</item>
        <item>Tv, Audio, Cameras &amp; Appliances</item>
        <item>Womens Zone</item>
        <item>Work From Home</item>
    </string-array>

    <!--DiscountFragment-->
    <string-array name="super_categories_discount">
        <item>All</item>
        <item>Automotive, Real Estate &amp; Industrial</item>
        <item>Toys ,Kids &amp; Babies</item>
        <item>Computers ,Laptops &amp; Gaming</item>
        <item>Gifts &amp; Sweets</item>
        <item>Mens Zone</item>
        <item>Hobbies &amp; E-Learning</item>
        <item>Tv, Audio, Cameras &amp; Appliances</item>
        <item>Home &amp; Living</item>
        <item>Mobiles ,Tablets &amp; Office Equipments</item>
        <item>Womens Zone</item>
        <item>Bags &amp; Luggage</item>
        <item>Jewellery &amp; Gold</item>
        <item>Sports &amp; Fitness</item>
        <item>Beauty, Health &amp; Fmcg</item>
        <item>Books</item>
        <item>GST</item>
        <item>Work From Home</item>
        <item>Eateries</item>
        <item>Prescription</item>
        <item>Non-Prescription</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

</resources>